Descarga de factura - ajuste en llamada a WS para descarga de factura