@@ -52,6 +52,8 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import Decoder.BASE64Decoder;
+
 
 /**
  * @author Maria Luisa
@@ -155,6 +157,7 @@ public class DescargaFacturaPageController extends AbstractPageController
 		DescargaFacturaResponse descargaFacturaResponse = null;
 		final DescargaFacturaRequest descargaFacturaRequest = new DescargaFacturaRequest();
 		final String numBP = customerFacade.getCurrentCustomer().getNumBP();
+		byte[] decodedBytes;
 
 
 		dataForm.setErrores(null);
@@ -192,15 +195,8 @@ public class DescargaFacturaPageController extends AbstractPageController
 				if (descargaFacturaResponse != null && descargaFacturaResponse.getPdf() != null
 						&& !descargaFacturaResponse.getPdf().isEmpty())
 				{
-					final String encodedBytes = descargaFacturaResponse.getPdf();
-
-					//		final BASE64Decoder decoder = new BASE64Decoder();
-					byte[] decodedBytes = new byte[0];
-					final FileOutputStream fop;
-					//	decodedBytes = new BASE64Decoder().decodeBuffer(encodedBytes);
-					decodedBytes = Base64.getDecoder().decode(decodedBytes);
-
-					final String fileName = dataForm.getNumObjeto() + "-" + dataForm.getNumBP() + ".pdf";
+					decodedBytes = new BASE64Decoder().decodeBuffer(descargaFacturaResponse.getPdf());
+					final String fileName = dataForm.getNumObjeto() + "-" + numBP + ".pdf";
 
 					final InputStream is = new ByteArrayInputStream(decodedBytes);
 
